<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">品趴</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 主界面导航栏文字 -->
    <string name="main_tab_home">品趴</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_me">我</string>
        <string name="main_tab_dream_show">梦想秀</string>
    

    <!-- 下拉刷新相关字符资源 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="pull_to_refresh_on_refreshing">加载中...</string>
    <string name="pull_to_refresh_lastest">最新更新:</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_release_label">释放加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>

    <!-- alert窗口相关字符资源 -->
    <string name="alert_title">提示</string>
    <string name="alert_exit_content">正在下载中，确定退出应用？</string>
    <string name="alert_buy_content">确定要购买么</string>
    <string name="alert_recharge_content">您的爱语币余额不足支付，是否充值？</string>
    <string name="alert_net_content">网络未连接</string>
    <string name="alert_btn_net">连接</string>
    <string name="alert_btn_recharge">充值</string>
    <string name="alert_btn_exit">退出</string>
    <string name="alert_btn_buy">购买</string>
    <string name="alert_btn_cancel">取消</string>
    <string name="alert_press">再按一次退出程序</string>
    <string name="alert_btn_set">设置</string>
    <string name="alert_btn_ok">确定</string>

    <!-- 活动界面字符资源 -->
    <string name="ongoing">进行中</string>
    <string name="ongoing_activities">正在进行</string>
    <string name="past_activities">往期活动</string>
    <string name="first_text_desc">微薄之盐</string>
    <string name="second_text_desc">调酒师体验</string>
    <string name="activity_default_address">北京－海淀区</string>
    <string name="activity_distance">(3.6km)</string>
    <string name="activity_date_desc">活动时间:</string>
    <string name="activity_time_begin">2015.05.06  19:00</string>
    <string name="activity_time_end">21:00</string>
    <string name="activity_praise_num">123</string>

    <!-- 活动详细界面字符资源 -->
    <string name="activity_fill_string">填充字符串</string>
    <string name="activity_item_name">体验内容:</string>
    <string name="activity_shop">店铺名称:</string>
    <string name="activity_address">店铺地址:</string>
    <string name="activity_time">体验时间:</string>
    <string name="activity_time_split">~</string>
    <string name="activity_regist_end">报名截止:</string>
    <string name="activity_allowed_num">体验名额:</string>
    <string name="activity_form">体验方式:</string>
    <string name="activity_detail">体验详情:</string>
    <string name="activity_contact">一键咨询:</string>
    <string name="activity_interested_num">132</string>
    <string name="activity_interested">感兴趣</string>
    <string name="activity_interested_people">人感兴趣</string>
    <string name="activity_regist">我要报名</string>
    <string name="activity_regist_already">已有</string>
    <string name="activity_regist_num">12</string>
    <string name="activity_regist_people">人报名</string>
    <string name="activity_user_name">用户名</string>
    <string name="activity_support_tip">支持</string>
    <string name="activity_comment_tip">评论</string>

    <!-- 邀请信界面字符资源 -->

    <string name="experience_list_name">作者 BY %1$s</string>
    <string name="experience_list_like"><![CDATA[喜欢 %1$s]]></string>
    <string name="experience_list_comment"><![CDATA[评论 %1$s]]></string>
    <string name="activity_invite_letter_name"><![CDATA[亲爱的 <font color="#f47857"> %1$s：</font>]]></string>
    <string name="activity_invite_letter_tips">
<![CDATA[活动说明:<br/>
	 	 	 	     1、请您在收到邀请信的48小时内选择接受,否则视为放弃此次的体验机会。<br/>2、如果在确认后另有安排,请至少在活动体验日的前一天联系我们告知原因,电话：<font color="#f47857"> 150 1150 5625 </font>。
	 	 	 	     <br/>3、如果确认后另有安排,并且没有及时联系我们,我们会在一定时间内忽略该用户的体验申请;如果相同情况达到两次以上,我们将永久剥夺该用户的体验资格。]]>
    </string>
    <string name="activity_invite_letter_chance"><![CDATA[&#160;&#160;恭喜您获得 <font color="#f47857"> %1$s </font> 的体验机会！]]></string>
    <string name="ongoing_activity_comment_time">评论时间</string>
    <string name="ongoing_activity_comment_content">这是评论的内容！</string>
    <string name="ongoing_activity_luck_reason">幸运理由：成全你了</string>

    <!-- 体验说明界面字符资源 -->
    <string name="activity_experience_flow">体验流程</string>
    <string name="activity_experience_step1">选择活动进入活动详情页，点击我要报名，即可参加活动。</string>
    <string name="activity_experience_step2">说说选择你的原因，喊出自己的宣言，让趴友们为你助威，获得的支持将是选择你的重要参考哦。</string>
    <string name="activity_experience_step3">报名信息一定要真实有效哦，方便我们联系您，及获得我们送出的体验礼包。</string>
    <string name="activity_experience_step4">报名截止后我们开始筛选趴友，这个过程需要一段时间，请耐心等待哦。</string>
    <string name="activity_experience_step5">我们将和获得资格的趴友沟通，以确保活动顺利进行。确认参加的趴友后发现无法按时参加，请确保提前一天通知我们，以方便我们把名额给予其他趴友。</string>
    <string name="activity_experience_step6">尽情的享受体验日的乐趣吧，但是体验结束别忘了和趴友们分享今天的收获哦！</string>
    <string name="activity_experience_step7">最终完成，还可以分享到其他平台，也向自己到好友炫耀一下吧！</string>

    <!-- 往期活动界面字符资源 -->
    <string name="past_dynamic_title">动态标题</string>
    <string name="past_dynamic_description">动态描述</string>
    <string name="past_activity_regist_end">报名截止</string>
    <string name="past_activity_view_member_experience">查看趴友体验</string>
    <string name="past_activity_view_more_statement">查看更多宣言 >></string>
    <string name="past_activity_comment_time">评论时间</string>
    <string name="past_activity_comment_content">这是评论的内容！</string>
    <string name="past_activity_luck_reason_tip">幸运理由:</string>
    <string name="past_activity_luck_reason">成全你了！</string>

    
    <!-- 报名界面字符资源 -->
 	<string name="enroll_statement">最强宣言</string>
    <string name="enroll_statement_tip">说明你的体验理由，不论深情的或奇葩的，只要你的理由够有说服力，比如收到趴友的赞和评论越多，你获得资格的机会越大哦！</string>
    <string name="enroll_statement_hint">向大家喊出选你的理由！</string>
    <string name="enroll_statement_length_limit">限0-140字</string>
    <string name="enroll_statement_next">下一步</string>
    
    <string name="enroll_userinfo">报名信息</string>
    <string name="enroll_userinfo_tip">信息度的完善也是您获得机会的重要指标哦！</string>
    <string name="enroll_userinfo_name">真实姓名</string>
    <string name="enroll_userinfo_phone">手机号</string>
    <string name="enroll_userinfo_sex">性别</string>
    <string name="enroll_userinfo_school_company">学校/公司</string>
    <string name="enroll_userinfo_id">身份证号</string>
    <string name="enroll_userinfo_address">详细地址</string>
    <string name="enroll_userinfo_address_city">市</string>
    <string name="enroll_userinfo_address_area">区</string>
    <string name="enroll_userinfo_address_tip">我们将会有邀请函和纪念品寄给您，确保信息正确哦！</string>
    <string name="enroll_userinfo_agree">我同意</string>
    <string name="enroll_userinfo_protocol">用户协议</string>
    <string name="enroll_userinfo_submit">提交</string>
    
    <string name="enroll_success_message">我们将在报名日期截止后1-2个工作日筛选出幸运的趴友，确认名单后将为您寄出邀请函，请您耐心等待哦！</string>
    <string name="enroll_success_ok">确认</string>
    <string name="enroll_success_ok_time">5s</string>
    
    <!-- "我"相关的活动界面 -->
    
    <!-- 1、"我"感兴趣的活动 -->
    <string name="my_interested_title">我感兴趣的活动</string>
    <string name="my_interested_no">您还没有添加任何感兴趣的活动~</string>
    <!-- 2、"我"报名的活动 -->
    <string name="my_enrolled_title">我报名的活动</string>
    <string name="my_enrolled_no">您还没有报名任何活动~</string>
    <!-- 3、"我"受邀的活动 -->
    <string name="my_invited_title">我受邀的活动</string>
    <string name="my_invited_no">您还没有收到任何邀请~</string>
    <string name="activity_default_invited_title">微薄之盐调酒体验师</string>
    
    <string name="activity_invited_envelope_desc">恭喜您！您收到了本次活动的体验邀请！请查看并确认！</string>
    <string name="activity_invited_edit">编辑体验收获</string>
    
    <string name="activity_invited_edit_experi">恭喜您抓住了体验机会，体验完成后记得回来和趴友们分享本次的体验感受哦，快快写起来吧！</string>
    <string name="activity_invited_view">查看我的体验记</string>
    
     <!-- 最强宣言列表字符资源 -->
 	<string name="statements_list_title">最强宣言</string>
 	<string name="statements_commment_content"><![CDATA[<font color="#8f72e6"> %1$s ：</font>回复 %2$s ：<font color="#ababab"> %3$s </font>]]></string>
    
 	<!-- 地图界面店铺名称 -->
 	<string name="map_shop_name">店铺名称</string>
 	
 	<!-- party立即启程字符资源 -->
 	<string name="activity_party_invition">
	<![CDATA[亲爱的趴星人:
		<br/>趴星球一年一度的节日就要开始了,
		<br/>各位趴星人快来加入盛典吧!
		<br/>举办地点:北京通州八各庄
		<br/>举办时间:2015年8月8号 10:00
		<br/>我们不见不散]]>
    </string>
    
 	<!-- party准备获取身份字符资源 -->
 	<string name="activity_party_ready_to_get_identity">
	<![CDATA[亲爱的趴星人:
		<br/>您即将进入趴星球,需要抽取您的身份,
		<br/>完成身份任务可以获得高额积分哦。]]>
    </string>
    
 	    
    <!-- 梦想秀  -->
    <string name="dream_show_who_says">%1$s 说</string>
    
 	<string name="party_experiences_no">该活动暂未添加任何经历~</string>
</resources>