<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto" 
    xmlns:app="http://schemas.android.com/apk/res-auto" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <RelativeLayout 
        android:id="@+id/RL_memberexperi_list_item_format"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">
	    <com.ipinpar.app.view.CircularImageView
	       android:id="@+id/memberexperi_image"
	       android:layout_width="@dimen/memberexperi_imagesize"
	       android:layout_height="@dimen/memberexperi_imagesize"
	       app:border_thickness="2dp"
	       app:border_outside_color="#dcdcdc"
	       android:src="@drawable/friend"
	       android:scaleType="centerCrop"
	       android:layout_marginLeft="10dp"
	       android:layout_marginBottom="5dp"
	       android:layout_marginTop="5dp">
	   	</com.ipinpar.app.view.CircularImageView>
	    
	    <TextView
	        android:id="@+id/memberexperi_user_name"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginTop="10dp"
	        android:layout_toRightOf="@+id/memberexperi_image"
	        android:ellipsize="end"
	        android:singleLine="true"
	        android:text="@string/activity_user_name"
	        android:textColor="@color/activity_memberexperi_username"
	        android:textSize="18sp"/>
	    
	    <TextView
	        android:id="@+id/memberexperi_time"
	        android:layout_width="wrap_content"
	        android:layout_height="20dp"
	        android:layout_toRightOf="@id/memberexperi_user_name"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="6dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/past_activity_comment_time"
	        android:textSize="14sp"
			android:textColor="@color/activity_memberexperi_time"
	        android:gravity="right"/>
	    
	    <TextView 
	        android:id="@+id/memberexperi_content"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/memberexperi_user_name"
	        android:layout_toRightOf="@id/memberexperi_image"
	        android:layout_marginLeft="8dp"
	        android:layout_marginTop="4dp"
	        android:lines="2"           
			android:ellipsize="end"
	        android:text="@string/past_activity_comment_content"
	        android:textSize="16sp"
	        android:textColor="@color/activity_memberexperi_content"/>
	    
	    <LinearLayout 
	        android:id="@+id/LL_support_and_comment"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false"
	        android:layout_below="@id/memberexperi_content"
	        android:layout_toRightOf="@id/memberexperi_image"
	        android:paddingBottom="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="3dp"
	        android:layout_marginRight="5dp"
	        android:orientation="horizontal">
	        <RelativeLayout
	            android:id="@+id/RL_memberexperi_support"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="horizontal">
	            <TextView 
	                android:id="@+id/tv_support_tip"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:text="@string/activity_support_tip"
	                android:layout_centerInParent="true"
	                android:textColor="@color/title_theme"/>
	            
	            <ImageView 
	                android:id="@+id/iv_memberexperi_support"
	                android:layout_width="30dp"
	                android:layout_height="30dp"
	                android:layout_toLeftOf="@id/tv_support_tip"
	                android:layout_marginTop="2dp"
	                android:layout_marginBottom="2dp"
	                android:src="@drawable/ac_support"/>
	            
	            <TextView 
	                android:id="@+id/tv_memberexperi_support_num"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@id/tv_support_tip"
	                android:layout_marginLeft="5dp"
	                android:layout_centerVertical="true"
	                android:text="@string/activity_regist_num"
	                android:textColor="@color/title_theme"/>
	            
	        </RelativeLayout>
	        
	       <RelativeLayout
	            android:id="@+id/RL_memberexperi_comment"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="horizontal">
	           <TextView 
	                android:id="@+id/tv_comment_tip"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:layout_centerInParent="true"
	                android:text="@string/activity_comment_tip"
	                android:textColor="@color/title_theme"/> 
	           
	            <ImageView 
	                android:id="@+id/iv_memberexperi_comment"
	                android:layout_width="30dp"
	                android:layout_height="30dp"
	                android:layout_marginTop="2dp"
	                android:layout_marginBottom="2dp"
	                android:layout_toLeftOf="@id/tv_comment_tip"
	                android:src="@drawable/ac_comment"/>
	            
	            <TextView 
	                android:id="@+id/tv_memberexperi_comment_num"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:layout_toRightOf="@id/tv_comment_tip"
	                android:layout_centerVertical="true"
	                android:text="@string/activity_regist_num"
	                android:textColor="@color/title_theme"/>
	            
	        </RelativeLayout>
	    </LinearLayout>
	    
	    <RelativeLayout 
	        android:id="@+id/RL_luck_reason"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/memberexperi_image"
	        android:layout_below="@id/LL_support_and_comment"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/rounded_text_grey_bg">
	       <TextView 
		        android:id="@+id/tv_luck_reason_tip"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="3dp"
		        android:layout_centerVertical="true"
		        android:text="@string/past_activity_luck_reason_tip"
		        android:textSize="14sp"
		        android:textColor="@color/activity_detail"/>
	        <TextView 
	            android:id="@+id/tv_luck_reason"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/tv_luck_reason_tip"
	            android:layout_marginLeft="3dp"
	            android:layout_centerVertical="true"
	            android:text="@string/past_activity_luck_reason"
	            android:textSize="16sp"
	            android:textColor="@color/activity_detail"/>
	    </RelativeLayout>
	</RelativeLayout>
</LinearLayout>
