<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto" 
    xmlns:app="http://schemas.android.com/apk/res-auto" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout 
        android:id="@+id/RL_activity_description"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:background="@color/transparent">
        
        <RelativeLayout 
            android:id="@+id/RL_iv_activity_desc"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
             android:background="@drawable/activity_list_item_image_corner_round">
            <ImageView 
	            android:id="@+id/iv_activity_desc"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:scaleType="fitXY"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/RL_iv_activity_desc_cover"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:background="@drawable/activity_list_item_image_corner_round">
            <ImageView 
	            android:id="@+id/iv_activity_desc_cover"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:scaleType="fitXY"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/RL_iv_activity_state_checking"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp">
            <ImageView 
                android:id="@+id/iv_activity_state_checking"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/ac_stamp_checking"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/RL_iv_activity_state_complete"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp">
            <ImageView 
                android:id="@+id/iv_activity_state_complete"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/past_activity_complete"/>
        </RelativeLayout>
        
        <LinearLayout 
            android:id="@+id/LL_text_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView 
                android:id="@+id/tv_first_text_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_text_desc"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            <TextView 
                android:id="@+id/tv_second_text_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/second_text_desc"
                android:textColor="@color/white"
                android:textSize="24sp"/>
        </LinearLayout>
        
        <ImageView 
            android:id="@+id/iv_decoration_bottom_bar"
            android:layout_width="80dp"
            android:layout_height="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/top_sliding_drawer"
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/LL_activity_detail"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@id/RL_activity_description"
         android:background="@drawable/activity_list_item_bottom_corner_round"
        android:orientation="horizontal">
        <RelativeLayout 
            android:id="@+id/RL_address_and_date_and_essential_statement"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout 
                android:id="@+id/RL_RL_address_and_date"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone">
                <LinearLayout 
	                android:id="@+id/LL_activity_address"
	                android:layout_width="fill_parent"
	                android:layout_height="30dp"
	                android:layout_marginTop="10dp"
	                android:orientation="horizontal">
	                <ImageView 
	                    android:id="@+id/iv_activity_address"
	                    android:layout_width="20dp"
	                    android:layout_height="20dp"
	                    android:layout_marginLeft="15dp"
	                    android:layout_gravity="center_vertical"
	                    android:background="@drawable/activity_address"/>
	                
	                <TextView 
	                    android:id="@+id/tv_activity_address"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="5dp"
	                    android:layout_gravity="center_vertical"
	                    android:text="@string/activity_default_address"
	                    android:textColor="@color/black"
	                    android:textSize="14sp"/>
	                
	                <TextView 
	                    android:id="@+id/tv_activity_distance"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:text="@string/activity_distance"
	                    android:visibility="invisible"
	                    android:textColor="@color/black"
	                    android:textSize="14sp"/>
	            </LinearLayout>
	            
	            <LinearLayout 
	                android:id="@+id/LL_activity_date"
	                android:layout_width="fill_parent"
	                android:layout_height="30dp"
	                android:layout_below="@id/LL_activity_address"
	                android:orientation="horizontal">
	                <ImageView 
	                    android:id="@+id/iv_activity_date"
	                    android:layout_width="20dp"
	                    android:layout_height="20dp"
	                    android:layout_marginLeft="15dp"
	                    android:contentDescription="@string/app_name"
	                    android:layout_gravity="center_vertical"
	                    android:background="@drawable/activity_date"/>
	                <TextView 
	                    android:id="@+id/tv_activity_time"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:layout_marginLeft="5dp"
	                    android:text="@string/activity_date_desc"
	                    android:textColor="@color/black"
	                    android:textSize="14sp"/>
	                <TextView 
	                    android:id="@+id/tv_activity_time_begin"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:text="@string/activity_time_begin"
	                    android:textColor="@color/black"
	                    android:textSize="14sp"/>
	                <TextView 
	                    android:id="@+id/tv_activity_time_split"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:text="~"
	                    android:textColor="@color/black"
	                    android:textSize="14sp"/>
	                <TextView 
	                    android:id="@+id/tv_activity_time_end"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:text="@string/activity_time_end"
	                    android:textColor="@color/black"
	                    android:textSize="14sp"/>
	            </LinearLayout>
            </RelativeLayout>
            
            <RelativeLayout 
                android:id="@+id/RL_essential_statement"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <com.ipinpar.app.view.CircularImageView
			       android:id="@+id/statement_image"
			       android:layout_width="@dimen/statement_imagesize"
			       android:layout_height="@dimen/statement_imagesize"
			       app:border_thickness="2dp"
			       app:border_outside_color="#dcdcdc"
			       app:border_inside_color="#ffffff"
			       android:src="@drawable/friend"
			       android:scaleType="centerCrop"
			       android:layout_marginLeft="10dp"
			       android:layout_marginBottom="5dp"
			       android:layout_marginTop="5dp">
			   	</com.ipinpar.app.view.CircularImageView>
			    
			    <TextView
			        android:id="@+id/tv_dynamic_title"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentTop="true"
			        android:layout_marginLeft="8dp"
			        android:layout_marginTop="10dp"
			        android:layout_toRightOf="@id/statement_image"
			        android:ellipsize="end"
			        android:singleLine="true"
			        android:text="@string/past_dynamic_title"
			        android:textColor="@color/black"
			        android:textSize="18sp"/>
			    
			    <ImageView 
			        android:id="@+id/iv_essential_statement"
			        android:layout_width="50dp"
			        android:layout_height="18dp"
			        android:layout_marginTop="10dp"
			        android:layout_marginLeft="3dp"
			        android:layout_toRightOf="@id/tv_dynamic_title"
			        android:background="@drawable/essential_statement"/>
			    
			    
			    <TextView 
			        android:id="@+id/tv_dynamic_description"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/tv_dynamic_title"
			        android:layout_toRightOf="@id/statement_image"
			        android:maxLines="2"
			        android:ellipsize="end"
			        android:layout_marginLeft="8dp"
			        android:layout_marginRight="8dp"
			        android:layout_marginTop="4dp"
			        android:text="@string/past_dynamic_description"
			        android:textSize="14sp"
			        android:textColor="@color/black"/>
            </RelativeLayout>
            
        </RelativeLayout>
        
        
    </LinearLayout>

</RelativeLayout>
